--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
     <div class="hero-content">
       <h2>Your Dream University Awaits</h2>
       <p>Find the best university that will lead you to your dream future.</p>
-      <a href="https://weunify-com.github.io/WeUnify-1/creambin%20(1)%20(2)%20(1).html" class="cta-button">Explore Now</a>
+      <a href="https://weunify-com.github.io/WeUnify-1/creambin (1) (2) (1).html" class="cta-button">Explore Now</a>
       <br><br>
-      <a href="E:\unify\quiz (1).html" class="cta-button quiz-button" target="_blank">Take the Quiz</a>
+      <a href="https://weunify-com.github.io/WeUnify-1/quiz.html" class="cta-button quiz-button" target="_blank">Take the Quiz</a>
     </div>
   </div>
 
